--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
+    "currency-codes": "^1.5.0",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
     "mysql2": "^1.6.5",
