--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lodash": "^4.17.11",
     "mysql2": "^1.6.5",
     "sequelize": "^5.7.4",
-    "utf8-bytes": "0.0.1"
+    "utf8-bytes": "0.0.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
