--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "currency-codes": "^1.5.0",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
     "mysql2": "^1.6.5",
