--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Tarek Mostafa",
   "license": "ISC",
   "dependencies": {
+    "aes-js": "^3.1.2",
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "currency-codes": "^1.5.0",
