--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "bootstrap": "^4.3.1",
-    "lodash": "^4.17.11",
-    "rc-datepicker": "^5.0.13",
+    "lodash": "^4.17.15",
+    "rc-datepicker": "^5.0.14",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
+    "react-chips": "^0.8.0",
     "react-dom": "^16.8.6",
     "react-redux": "^6.0.1",
     "react-router-bootstrap": "^0.25.0",
