--- a/client/package.json
+++ b/client/package.json
@@ -4,18 +4,18 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.1",
-    "bootstrap": "^4.3.1",
-    "lodash": "^4.17.15",
-    "rc-datepicker": "^5.0.14",
-    "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.6",
+    "bootstrap": "^4.6.0",
+    "lodash": "^4.17.21",
+    "rc-datepicker": "^5.0.16",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.5.1",
     "react-chips": "^0.8.0",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.14.0",
     "react-redux": "^6.0.1",
     "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.0.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8",
-    "redux": "^4.0.1",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
   "proxy": "http://localhost:5000",
