--- a/client/package.json
+++ b/client/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.22.0",
+    "axios": "^1.6.2",
     "bootstrap": "^4.6.0",
     "lodash": "^4.17.21",
     "rc-datepicker": "^5.0.16",
     "react": "^16.14.0",
-    "react-bootstrap": "^1.5.1",
+    "react-bootstrap": "^1.6.7",
     "react-chips": "^0.8.0",
     "react-dom": "^16.14.0",
     "react-month-year-picker": "^1.0.1",
     "react-redux": "^6.0.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "2.1.8",
+    "react-scripts": "^5.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
